--- a/app/src/main/res/layout/activity_update_status.xml
+++ b/app/src/main/res/layout/activity_update_status.xml
@@ -10,6 +10,14 @@
         tools:context="com.google.mlkit.showstatus.UpdateStatusActivity">
 
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_status"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
