--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="hint_color">#979595</color>
     <color name="black">#000000</color>
     <color name="button_color">#931b1e</color>
+    <color name="colorLightGray">#83000000</color>
 </resources>
