--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         tools:context="com.google.mlkit.login.LoginActivity">
 
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/logo"
             android:layout_width="@dimen/logo_width1"
             android:layout_height="@dimen/logo_height1"
@@ -58,8 +58,42 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/et_password2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/value_20"
+                android:background="@drawable/shape_edittext"
+                android:imeOptions="actionDone"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false"
+                android:drawableStart="@drawable/ic_password"
+                android:drawablePadding="@dimen/value_5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/et_username"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/button_color">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:layout_marginStart="@dimen/value_10"
+                    android:layout_marginEnd="@dimen/value_10"
+                    android:drawableStart="@drawable/ic_password"
+                    android:drawablePadding="@dimen/value_5"
+                    android:textColor="@color/text_color"
+                    android:textColorHint="@color/hint_color"
+                    android:inputType="textPassword"
+                    android:maxLength="30"
+                    android:textSize="@dimen/size_14"
+                    android:hint="@string/password" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
             <EditText
-                android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/value_20"
@@ -71,6 +105,7 @@
                 android:paddingStart="@dimen/value_10"
                 android:paddingTop="@dimen/value_10"
                 android:paddingEnd="@dimen/value_15"
+                android:visibility="gone"
                 android:paddingBottom="@dimen/value_10"
                 android:textColor="@color/text_color"
                 android:textColorHint="@color/hint_color"
@@ -97,7 +132,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_password" />
+                app:layout_constraintTop_toBottomOf="@id/et_password2" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
