--- a/app/src/main/res/layout/view_status_pending.xml
+++ b/app/src/main/res/layout/view_status_pending.xml
@@ -31,12 +31,14 @@
 
 
         <TextView
+            android:id="@+id/status"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/value_15"
             android:layout_marginEnd="@dimen/value_15"
             android:text="@string/app_name"
             android:textColor="@color/text_color_light"
+            android:textSize="@dimen/size_14"
             app:layout_constraintBottom_toBottomOf="@id/progress_circle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/progress_circle"
