--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#4CAF50</color>
     <color name="colorPrimaryDark">#388E3C</color>
+    <color name="colorDone">#388E3C</color>
     <color name="colorAccent">#7C4DFF</color>
 
     <color name="blue_grey_400">#78909C</color>
