trackshipment and scan barcode button

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,12 +14,12 @@
             android:id="@+id/tv_scan"
             android:layout_width="@dimen/scan_height"
             android:layout_height="@dimen/scan_height"
-            app:layout_constraintVertical_bias="0.4"
             android:src="@drawable/scan"
             app:layout_constraintBottom_toTopOf="@id/btn_scancode"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.35"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -40,6 +40,25 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_scan"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_track_shipment"
+            android:layout_width="@dimen/width_button"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/value_40"
+            android:background="@drawable/shape_button"
+            android:inputType="textImeMultiLine"
+            android:paddingStart="@dimen/value_20"
+            android:paddingTop="@dimen/value_5"
+            android:paddingEnd="@dimen/value_20"
+            android:paddingBottom="@dimen/value_5"
+            android:text="@string/track_shipment"
+            android:textColor="@color/white"
+            android:textSize="@dimen/size_14"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btn_scancode"
             app:layout_constraintVertical_chainStyle="packed" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
