--- a/app/src/main/res/layout/activity_update_status.xml
+++ b/app/src/main/res/layout/activity_update_status.xml
@@ -8,15 +8,29 @@
         android:background="@color/white"
         tools:context="com.google.mlkit.showstatus.UpdateStatusActivity">
 
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/value_15"
+            android:layout_marginEnd="@dimen/value_15"
+            android:textColor="@color/black"
+            android:textSize="@dimen/size_14"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/value_10"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_status"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/value_20"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+           app:layout_constraintTop_toBottomOf="@+id/status" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
