--- a/app/src/main/res/layout/activity_show_status.xml
+++ b/app/src/main/res/layout/activity_show_status.xml
@@ -9,15 +9,29 @@
         android:background="@color/white"
         tools:context="com.google.mlkit.showstatus.ShowStatusActivity">
 
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/value_15"
+            android:layout_marginEnd="@dimen/value_15"
+            android:textColor="@color/black"
+            android:textSize="@dimen/size_14"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/value_10"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:padding="@dimen/value_10"
+            android:layout_marginTop="@dimen/value_20"
             tools:listitem="@layout/view_status_pending"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+           app:layout_constraintTop_toBottomOf="@+id/status" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
