--- a/app/src/main/res/layout/view_status_done.xml
+++ b/app/src/main/res/layout/view_status_done.xml
@@ -19,10 +19,11 @@
 
 
         <ImageView
+            android:translationZ="@dimen/value_10"
             android:id="@+id/progress_circle"
-            android:layout_width="@dimen/value_20"
-            android:layout_height="@dimen/value_20"
-            android:background="@drawable/green_circle"
+            android:layout_width="@dimen/value_25"
+            android:layout_height="@dimen/value_25"
+            android:background="@drawable/ic_green_tick_circle"
             app:layout_constraintBottom_toBottomOf="@id/progress"
             app:layout_constraintEnd_toEndOf="@id/progress"
             app:layout_constraintStart_toStartOf="@id/progress"
@@ -38,7 +39,8 @@
             android:layout_marginEnd="@dimen/value_15"
             android:text="@string/app_name"
             android:textColor="@color/black"
-            android:textSize="@dimen/size_14"
+            android:textSize="@dimen/size_16"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/progress_circle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/progress_circle"
