set the password toggle button

--- a/app/src/main/res/layout/activity_show_status.xml
+++ b/app/src/main/res/layout/activity_show_status.xml
@@ -11,27 +11,33 @@
 
         <TextView
             android:id="@+id/status"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/value_15"
+            android:layout_marginTop="@dimen/value_10"
             android:layout_marginEnd="@dimen/value_15"
-            android:textColor="@color/black"
+            android:background="@color/button_color"
+            android:paddingStart="@dimen/value_15"
+            android:paddingTop="@dimen/value_5"
+            android:paddingEnd="@dimen/value_15"
+            android:paddingBottom="@dimen/value_5"
+            android:text="234457899890809809809"
+            android:textColor="@color/white"
             android:textSize="@dimen/size_14"
             android:textStyle="bold"
-            android:layout_marginTop="@dimen/value_10"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:padding="@dimen/value_10"
-            android:layout_marginTop="@dimen/value_20"
-            tools:listitem="@layout/view_status_pending"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/value_20"
+            android:padding="@dimen/value_10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@+id/status" />
+            app:layout_constraintTop_toBottomOf="@+id/status"
+            tools:listitem="@layout/view_status_pending" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
