--- a/app/src/main/res/layout/row_status_pending.xml
+++ b/app/src/main/res/layout/row_status_pending.xml
@@ -27,7 +27,8 @@
             android:layout_marginEnd="@dimen/value_5"
             android:text="@string/app_name"
             android:textColor="@color/colorLightGray"
-            android:textSize="@dimen/size_14"
+            android:textSize="@dimen/size_16"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/iv_status"
             app:layout_constraintEnd_toStartOf="@id/done"
             app:layout_constraintHorizontal_weight="1"
