--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="value_25">25dp</dimen>
     <dimen name="value_40">40dp</dimen>
     <dimen name="value_50">50dp</dimen>
+    <dimen name="size_10">10sp</dimen>
     <dimen name="size_12">12sp</dimen>
     <dimen name="size_14">14sp</dimen>
     <dimen name="size_16">16sp</dimen>
