--- a/app/src/main/res/layout/activity_update_status.xml
+++ b/app/src/main/res/layout/activity_update_status.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context="com.google.mlkit.showstatus.UpdateStatusActivity">
+        tools:context="com.google.mlkit.updatestatus.UpdateStatusActivity">
 
         <TextView
             android:id="@+id/status"
