--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,7 @@
     <dimen name="height_progress">70dp</dimen>
     <dimen name="height_progress_small">40dp</dimen>
     <dimen name="width_progress">3dp</dimen>
-    <dimen name="width_button">200dp</dimen>
+    <dimen name="width_button">250dp</dimen>
     <dimen name="scan_height">170dp</dimen>
     <dimen name="value_10">10dp</dimen>
     <dimen name="value_15">15dp</dimen>
@@ -20,6 +20,7 @@
     <dimen name="value_25">25dp</dimen>
     <dimen name="value_40">40dp</dimen>
     <dimen name="value_50">50dp</dimen>
+    <dimen name="value_100">100dp</dimen>
     <dimen name="size_10">10sp</dimen>
     <dimen name="size_12">12sp</dimen>
     <dimen name="size_14">14sp</dimen>
