Update Whole container status

--- a/app/src/main/res/layout/activity_update_whole_container_status.xml
+++ b/app/src/main/res/layout/activity_update_whole_container_status.xml
@@ -26,6 +26,7 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:padding="@dimen/value_10"
+                android:overlapAnchor="false"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
