--- a/app/src/main/res/layout/activity_update_whole_container_status.xml
+++ b/app/src/main/res/layout/activity_update_whole_container_status.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/value_40"
             android:background="@drawable/shape_button"
-            android:text="@string/username"
+            android:text="@string/update_status"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/layout_spinner" />
